<resources>
    <string name="app_name">AudioPlayer</string>
    <string name="effect">Effect</string>
    <string name="audio_cover">Audio Cover</string>
    <string name="audio_title">Audio Title</string>
    <string name="audio_artist">Audio Artist</string>
    <string name="loop">Loop</string>
    <string name="prev">Prev</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="playlist">Playlist</string>
    <string name="_00_00">00:00</string>
    <string name="scan_local_songs">Scan Local Songs</string>
    <string name="_00_01">00:00</string>
    <string name="effect_switch">Effect Switch</string>
    <string name="default_effect_name">Effect</string>
</resources>
